--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <meta name="apple-mobile-web-app-title" content="portfolio">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <title>portfolio</title>
+  <title>omairKhan</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
