--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <meta name="apple-mobile-web-app-title" content="portfolio">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <title>omairKhan</title>
+  <title>portfolio</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
@@ -31,7 +31,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = '206795517';
+    var serviceWorkerVersion = '1275315781';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
