--- a/index.html
+++ b/index.html
@@ -15,15 +15,19 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="Omair's portfolio.">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="portfolio">
+  <meta name="apple-mobile-web-app-title" content="Omair Khan">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <title>portfolio</title>
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+
+
+  <title>Omair Khan</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
@@ -31,7 +35,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = '1275315781';
+    var serviceWorkerVersion = '3156614462';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
