--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
   <meta name="apple-mobile-web-app-title" content="Omair Khan">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <!-- <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" href="favicon.ico" type="image/x-icon"> -->
+
+  <link rel="shortcut icon" type="image/png" href="icons/favicon.png" />
 
 
   <title>Omair Khan</title>
@@ -35,7 +37,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = '2040345121';
+    var serviceWorkerVersion = '3393890848';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
