--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <!-- <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link rel="icon" href="favicon.ico" type="image/x-icon"> -->
 
-  <link rel="shortcut icon" type="image/png" href="icons/favicon.png" />
+  <!-- <link rel="shortcut icon" type="image/png" href="icons/favicon.png" /> -->
 
 
   <title>Omair Khan</title>
@@ -37,7 +37,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = '3393890848';
+    var serviceWorkerVersion = '1584870425';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
